; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-zoltrix.c_zol_mute.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/radio/extr_radio-zoltrix.c_zol_mute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zoltrix = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.zoltrix*)* @zol_mute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zol_mute(%struct.zoltrix* %0) #0 {
  %2 = alloca %struct.zoltrix*, align 8
  store %struct.zoltrix* %0, %struct.zoltrix** %2, align 8
  %3 = load %struct.zoltrix*, %struct.zoltrix** %2, align 8
  %4 = getelementptr inbounds %struct.zoltrix, %struct.zoltrix* %3, i32 0, i32 0
  store i32 1, i32* %4, align 8
  %5 = load %struct.zoltrix*, %struct.zoltrix** %2, align 8
  %6 = getelementptr inbounds %struct.zoltrix, %struct.zoltrix* %5, i32 0, i32 1
  %7 = call i32 @mutex_lock(i32* %6)
  %8 = load %struct.zoltrix*, %struct.zoltrix** %2, align 8
  %9 = getelementptr inbounds %struct.zoltrix, %struct.zoltrix* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @outb(i32 0, i64 %10)
  %12 = load %struct.zoltrix*, %struct.zoltrix** %2, align 8
  %13 = getelementptr inbounds %struct.zoltrix, %struct.zoltrix* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @outb(i32 0, i64 %14)
  %16 = load %struct.zoltrix*, %struct.zoltrix** %2, align 8
  %17 = getelementptr inbounds %struct.zoltrix, %struct.zoltrix* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, 3
  %20 = call i32 @inb(i64 %19)
  %21 = load %struct.zoltrix*, %struct.zoltrix** %2, align 8
  %22 = getelementptr inbounds %struct.zoltrix, %struct.zoltrix* %21, i32 0, i32 1
  %23 = call i32 @mutex_unlock(i32* %22)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @inb(i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
